# Maids-Dashboard

./: .gitignore  README.md  RUNBOOK.md  config_check.py  dashboard_backend.py  dashboard_db.py  delegation_classifier.py  drift_detector.py  event_log.py  ingestion.py  lorebook_engine.py  maid_contract.py  plot_graph.py  pyproject.toml  rp_assets.py  scene_packet.py  session_ingest.py  sse_manager.py
.github/workflows/: deploy.yml
api/: app.py  canon.py  config.py  cron.py  delivery.py  dispatch.py  gateway.py  heartbeat.py  incidents.py  maids.py  plot.py  rp.py  sessions.py
canon/: __init__.py  cli.py  store.py  validator.py
core/: models.py  text_util.py  utils.py
deploy/: DEPLOY_GUIDE.md  deploy.sh  packaging.ps1
docs/: maidsclaw-integration-gap.md  refactor-consensus.md  v2-roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
gateway/: __init__.py  client.py  probe.py
services/: config_service.py  cron_service.py  delivery_service.py  dispatch_service.py  incident_service.py  maid_service.py  models_service.py  session_service.py  shared.py  state.py
static/: index.html
tests/: test_canon_cli.py  test_canon_concurrency.py  test_canon_store.py  test_canon_validator.py  test_character_card_v2.py  test_dashboard_backend.py  test_delegation_classifier.py  test_drift_detector.py  test_event_log.py  test_lorebook_engine.py  test_maid_contract.py  test_plot_graph.py  test_scene_packet.py  test_schema_migration.py  test_security_and_features.py  test_session_ingest.py  test_smoke.py  test_text_util.py
(+28 files in other folders)
